2013-06-03 Build User <jenkins@coast-project.org>

      
      PKGBUILD prepared for new jenkins-ci version 1.517


2013-05-28 Build User <jenkins@coast-project.org>

      jenkins-ci-1.516-1:
      PKGBUILD prepared for new jenkins-ci version 1.516

      not enabling/starting systemd service anymore, hint from @hacosta

      simplified jenkins-ci install file

      using tmpfiles.d to create/delete /var/cache/jenkins dir

      Change-Id: I3c7d2770c071796b60d2a912f20e0b7d87dda28e


2013-05-22 Marcel Huber <marcelhuberfoo@gmail.com>

     
      corrected chown flaw with empty dir

      adjusted directory test statements

      Change-Id: I1499ca92647f0951c5accd6664d37d5b31269581


2013-05-22 Marcel Huber <marcel.huber@hsr.ch>

      jenkins-ci-1.515-2:
      corrected package version/release

      Change-Id: I62ee2b1a3a136767caf8793be5c1fd64df236a6a


2013-05-22 Marcel Huber <marcel.huber@hsr.ch>

     
      Merge "omitting systemctl messages on stderr"


2013-05-22 Marcel Huber <marcel.huber@hsr.ch>

     
      omitting systemctl messages on stderr

      Change-Id: Ia3b53294052de4b1a406f45eb27684266f53bd93


2013-05-19 Build User <jenkins@coast-project.org>

      jenkins-ci-1.515-1:
      PKGBUILD prepared for new jenkins-ci version 1.515


2013-05-02 Build User <jenkins@coast-project.org>

      jenkins-ci-1.514-1:
      PKGBUILD prepared for new jenkins-ci version 1.514


2013-04-29 Build User <jenkins@coast-project.org>

      jenkins-ci-1.513-1:
      PKGBUILD prepared for new jenkins-ci version 1.513


2013-04-22 Build User <jenkins@coast-project.org>

      jenkins-ci-1.512-1:
      PKGBUILD prepared for new jenkins-ci version 1.512


2013-04-15 Build User <jenkins@coast-project.org>

      jenkins-ci-1.511-1:
      PKGBUILD prepared for new jenkins-ci version 1.511


2013-04-09 Build User <jenkins@coast-project.org>

      jenkins-ci-1.510-1:
      PKGBUILD prepared for new jenkins-ci version 1.510
