@@ -16,7 +16,8 @@ depends=('openssl' 'lzo2' 'zlib' 'python2' 'mariadb-clients')
 makedepends=("qt4" "gtk2")
 optdepends=("qt4: for bat"
             "gtk2: for tray monitor"
-            "python2: python support")
+            "python2: python support"
+	    "perl-dbd-mysql: access using webmin module")
 options=(!buildflags !libtool)
 conflicts=("${_pkgname}-sqlite" "${_pkgname}-mysql" "${_pkgname}-postgresql" "${_pkgname}" "${_pkgname}-client")
 replaces=("${_pkgname}-mysql" "${_pkgname}")
@@ -50,7 +51,6 @@ build() {
         --enable-batch-insert --enable-ipv6 \
 		--with-mysql --with-openssl --with-python --with-tcp-wrappers=no \
         --with-systemd \
-		--with-fd-user=${_pkgname} --with-fd-group=${_pkgname} \
 		--with-dir-user=${_pkgname} --with-dir-group=${_pkgname} \
 		--with-sd-user=${_pkgname} --with-sd-group=${_pkgname} \
 		--sysconfdir=/etc/${_pkgname} --with-scriptdir=/etc/${_pkgname}/scripts \
@@ -75,6 +75,7 @@ package() {
 
 	# Permissions
 	chmod a+x ${pkgdir}/etc/${_pkgname}/scripts/{update_${_pkgname}_tables,delete_catalog_backup,update_mysql_tables,make_catalog_backup,bconsole}
+	chown bacula:bacula ${pkgdir}/var/cache/bacula/working
 
 	# Daemons
 	mkdir -p ${pkgdir}/etc/rc.d/
@@ -84,11 +85,13 @@ package() {
 
 	# tmp dir for pid file
 	mkdir -p ${pkgdir}/usr/lib/tmpfiles.d
-    install -Dm644 ${srcdir}/${_pkgname}.conf ${pkgdir}/usr/lib/tmpfiles.d/${_pkgname}.conf
+        install -Dm644 ${srcdir}/${_pkgname}.conf ${pkgdir}/usr/lib/tmpfiles.d/${_pkgname}.conf
 
 	# Logs
 	install -D -m644 ${srcdir}/${_pkgname}-${pkgver}/scripts/logrotate ${pkgdir}/etc/logrotate.d/${_pkgname}
-	sed -i "s|/var/cache/${_pkgname}/working/log|/var/log/${_pkgname}.log|g" ${pkgdir}/etc/{${_pkgname}/${_pkgname}-dir.conf,logrotate.d/${_pkgname}}
+	sed -i "s|/usr/opt/${_pkgname}/log/${_pkgname}.log|/var/log/${_pkgname}.log|g" ${pkgdir}/etc/{${_pkgname}/${_pkgname}-dir.conf,logrotate.d/${_pkgname}}
+	touch ${pkgdir}/var/log/bacula.log
+	chown bacula:bacula ${pkgdir}/var/log/bacula.log
 
     # Fix permissions
     chmod -R 755 ${pkgdir}/usr/bin
