@@ -1,0 +1,25 @@
+# Archtrack maintainer: Evan Teitelman <teitelmanevan at gmail dot com>
+# Contributor: Francesco Piccinno <stack.box@gmail.com>
+
+pkgname=braa
+pkgver=0.82
+pkgrel=1
+pkgdesc="Braa is a mass snmp scanner"
+arch=('i686' 'x86_64')
+url="http://s-tech.elsat.net.pl/braa/"
+updateurl="http://s-tech.elsat.net.pl/braa/=>braa-"
+license=('GPL')
+depends=('glibc')
+makedepends=('subversion' 'nasm')
+provides=('nbtool' 'dnscat')
+source=("http://s-tech.elsat.net.pl/$pkgname/$pkgname-$pkgver.tar.gz")
+md5sums=('e28f8b0591672de9aaa7dcf54332f6ce')
+
+groups=(archtrack archtrack-info-gathering)
+
+build() {
+  cd "$srcdir/$pkgname-$pkgver"
+  make CFLAGS="$CFLAGS" || return 1
+  install -Dm755 $pkgname $pkgdir/usr/bin/$pkgname
+  install -Dm644 README $pkgdir/usr/share/doc/$pkgname/README
+}
