@@ -1,7 +1,7 @@
 # Maintainer: Alain Kalker <a {dot} c {dot} kalker "at" gmail {dot} com>
 pkgname=dparser
-pkgver=1.29
-pkgrel=2
+pkgver=1.30
+pkgrel=1
 pkgdesc="A scannerless GLR parser generator based on the Tomita algorithm"
 arch=('i686' 'x86_64')
 url="http://dparser.sourceforge.net/"
@@ -10,7 +10,7 @@ depends=('glibc' 'gc')
 source=(http://prdownloads.sourceforge.net/$pkgname/d-$pkgver-src.tar.gz)
 # bsdtar doesn't grok upstream tarball which has duplicate files in it
 noextract=(d-$pkgver-src.tar.gz)
-md5sums=('9e71e004c091bbd531ad0533623cc76d')
+md5sums=('04b4e5ff4834d64e348deb294f655e7f')
 
 build() {
   cd "$srcdir"
