@@ -4,14 +4,15 @@
 # Contributor: Simon Morgan <simon@16hz.net>
 
 pkgname=fatsort
-pkgver=1.1.331
+pkgver=1.1.1.336
 pkgrel=1
+epoch=1
 pkgdesc="Sorts directory structures of FAT16 and FAT32 file systems"
 arch=('i686' 'x86_64')
 url="http://fatsort.sourceforge.net/"
 license=('GPL')
 source=("http://downloads.sourceforge.net/project/$pkgname/$pkgname-$pkgver.tar.gz")
-md5sums=('339bc147e6589fbb37684f3a6638e3fa')
+md5sums=('268ce4154ede7c08ff09eb3a80f0db51')
 
 build() {
   cd "$srcdir/$pkgname-$pkgver"
