@@ -2,15 +2,16 @@
 
 pkgname=gcolor3-git
 _gitname=gcolor3
-pkgver=2013.06.10
-pkgrel=1
+pkgver=2013.06.11
+pkgrel=2
 pkgdesc="A simple color selection dialog in GTK3"
 arch=('i686' 'x86_64')
 url="http://unia.github.io/gcolor3/"
 license=('GPL2')
-depends=('gtk3')
+depends=('gtk3' 'hicolor-icon-theme')
 makedepends=('git' 'intltool')
 source=('git://github.com/Unia/gcolor3.git')
+install=gcolor3.install
 md5sums=('SKIP')
 
 pkgver() {
