@@ -1,0 +1,12 @@
+post_install() {
+	update-desktop-database -q
+	gtk-update-icon-cache -q -t -f usr/share/icons/hicolor
+}
+
+post_upgrade() {
+	post_install
+}
+
+post_remove() {
+	post_install
+}
