@@ -1,31 +1,23 @@
  
-# Contributor: Emile Pesik <this.id.was.still.free at gmail dot com>
+# Maintainer: Emile Pesik <ristridin [at] gmail [dot] com>
 
 pkgname=gtksetpwc
 pkgver=0.2
-pkgrel=1
+pkgrel=2
 pkgdesc="GTK2 frontend for setpwc"
 arch=('i686' 'x86_64')
 url="http://gtksetpwc.spiderou.net/"
 license=('custom:"CeCILL"')
 depends=('setpwc' 'perl' 'gtk2-perl')
-makedepends=()
-optdepends=()
-provides=()
-conflicts=()
-replaces=()
-backup=()
-options=()
-install=
 source=("http://gtksetpwc.spiderou.net/files/$pkgname-$pkgver.tar.bz2"
 "http://gtksetpwc.spiderou.net/files/webcam.png"
 'gtksetpwc.desktop')
 noextract=()
-md5sums=('a2c8bc1e990632ecf8c5df3b2313d069'  # tarball
-         '76f6153d38d87b53bed8d19c9947d6fe'  # webcam.png
+md5sums=('d8702f6a8405e84ea89eae36d6b6ae2e'  # tarball
+	 '76f6153d38d87b53bed8d19c9947d6fe'  # webcam.png
 	 '0ed9dcbf01784d40b9328ecdfe508e4e') # gtksetpwc.desktop
-                  
-build() {
+
+package() {
     # install binary
     install -Dm755 "$srcdir/$pkgname/gtksetpwc.pl" \
         "$pkgdir/usr/bin/gtksetpwc.pl" || return 1
@@ -41,4 +33,4 @@ build() {
         "$pkgdir/usr/share/licenses/$pkgname/LICENCE.EN" || return 1
     install -Dm644 "$srcdir/$pkgname/LICENCE.FR" \
         "$pkgdir/usr/share/licenses/$pkgname/LICENCE.FR" || return 1
-}
+    }
