@@ -1,8 +1,8 @@
 # Maintainer: Alexsandr Pavlov <kidoz at mail dot ru>
 pkgname=intellij_idea
 _pkgname=idea-IU
-pkgver=12.1.3
-_pkgver=129.451
+pkgver=12.1.4
+_pkgver=129.713
 pkgrel=1
 pkgdesc="The most intelligent Java IDE."
 arch=('i686' 'x86_64')
@@ -14,7 +14,7 @@ source=(http://download.jetbrains.com/idea/ideaIU-${pkgver}.tar.gz
          intellij_idea
          intellij_idea.desktop)
 
-sha256sums=('c3c5aa2043d7bbb0fb222ab74f7beadd0dd8975d44aeef856a7630312b642723'
+sha256sums=('ac5e7bc80cee547f9d5f7e401dc27e0f0798d66fa38b9118cdb00d6dfcbfc4b3'
             '71facc43aedfe34d56093ee33a2856511fee6762287eb128c7bbe4c4c8a4d07c'
             '38dcbc472588050c3dd742a053f7651e10de59a5db8151c8c4459a0bfc4f83ce')
 
