@@ -2,7 +2,7 @@
 # Contributor: Illarion Kovalchuk <illarion.kovalchuk at gmail dot com>
 
 pkgname=jenkins-ci
-pkgver=1.517
+pkgver=1.518
 pkgrel=1
 epoch=
 pkgdesc="An extendable open source continuous integration server"
@@ -27,7 +27,7 @@ source=(http://mirrors.jenkins-ci.org/war/$pkgver/jenkins.war
         jenkins.tmpfiles.d
         LICENSE)
 noextract=(jenkins.war)
-sha256sums=('2138484cd80cf9326488a433481fbddf97263930251b653f877feb81295bbb12'
+sha256sums=('90086cd4bf3dbf46daf149e61441c495a689051a5c589071b84394a728c53132'
             '13b6e06de1dedff96bdb8e43f6830bbd954dc58df9d4ed5583693d2a6f8427f4'
             '6ffdcec6c06105710886ff48d3d12bc8cc9cc0f642718c165f658f6475fb268f'
             '0ccff16308b01b02f2699ea64a73b8dce1e1990ee1c656aa8d6119dee510262e'
