@@ -1,7 +1,7 @@
 # Maintainer: Oscar Pereira <oscar a erroneousthoughts org>
 
 pkgname=kpcli
-pkgver=2.0
+pkgver=2.1
 pkgrel=1
 pkgdesc="Command line browser of KeePassX database files (*.kdb)"
 arch=('any')
@@ -12,8 +12,8 @@ install='kpcli.install'
 url='http://sourceforge.net/projects/kpcli/'
 source=("http://downloads.sourceforge.net/project/kpcli/kpcli-$pkgver.pl"
         "http://downloads.sourceforge.net/project/kpcli/README")
-md5sums=('7f4857d933c1e308cab6538c5fa2a3d7'
-         'ef54a6170aad99c085c1c2e40224bf78')
+md5sums=('673448479a492e5ad0a2166d79baa4ec'
+         'fc8310fc6e9a88d439833dd094dc725e')
 
 package() {
 	mkdir -p $pkgdir/usr/bin/
