@@ -10,7 +10,7 @@ license=('LGPL3')
 arch=('i686' 'x86_64')
 depends=('util-linux-ng' 'zlib' 'openssl')
 options=(!libtool)
-source=(https://libewf.googlecode.com/files/${pkgname}-${pkgver}.tar.gz)
+source=(http://kfgz.mydevil.net/${pkgname}-${pkgver}.tar.gz)
 sha1sums=('b455412299fd15e7a4f1be670d886f99350bdae4')
 
 build() {
