@@ -2,7 +2,7 @@
 # Contributor: Tilmann Becker <tilmann.becker@web.de> 
 
 pkgname=scribus-svn
-pkgver=18238
+pkgver=18312
 pkgrel=1
 pkgdesc="A desktop publishing program - Version from SVN"
 arch=('i686' 'x86_64')
@@ -10,21 +10,20 @@ license=('GPL')
 url="http://www.scribus.net"
 install=${pkgname}.install
 depends=('qt5-webkit'     \
-  'libcups>=1.2.10'       \
-  'lcms2'                 \
-  'ghostscript>=8.60'     \
-  'libart-lgpl>=2.3.19'   \
-  'aspell'                \
-  'poppler'               \
+  'hunspell'              \
+  'podofo'                \
   'python2'               \
   'graphicsmagick'        \
-  'shared-mime-info')
+  'shared-mime-info'      \
+  'cairo' 'poppler' \
+  'desktop-file-utils'
+  )
 makedepends=('subversion' 'cmake' 'qt5-tools')
 conflicts=('scribus')
 provides=('scribus')
-md5sums=('SKIP')
 options=('!emptydirs')
 source=('scribus::svn://scribus.net/trunk')
+md5sums=('SKIP')
 _svnmod='scribus'
 
 pkgver() {
