@@ -2,16 +2,11 @@
 # Contributor Todd Maynard <arch [at] toddmaynard [dot] com>
 pkgname=setpwc
 pkgver=1.3
-pkgrel=1
+pkgrel=2
 pkgdesc="Set various aspects of Philips (and compatible) webcams."
 url="http://www.vanheusden.com/setpwc/"
 license=('GPL2')
-depends=()
-makedepends=()
 optdepends=('gtksetpwc: GTK2 frontend for setpwc')
-conflicts=()
-replaces=()
-backup=()
 arch=('any')
 install=setpwc.install
 source=(http://www.vanheusden.com/$pkgname/$pkgname-$pkgver.tgz)
@@ -20,9 +15,11 @@ md5sums=('79d5ee468c0076feb3cac473bef661d2')
 build() {
   cd $srcdir/$pkgname-$pkgver
   make || return 1
-  #make DESTDIR=$pkgdir install  #Makefile has hardcoded destination
-  
-  #We will copy the binary over manually - since it is trivial to do.
-  mkdir -p $pkgdir/usr/bin
-  cp setpwc $pkgdir/usr/bin
-}
+  }
+
+package() {
+  #make	 DESTDIR=$pkgdir install
+  #The Makefile has a hardcoded destination so we will install the binary manually instead
+  cd $srcdir/$pkgname-$pkgver
+  install -D -m 755 setpwc $pkgdir/usr/bin/setpwc
+  }
