@@ -1,11 +1,11 @@
 pkgname=tewisay-git
 _gitname='tewisay'
-pkgver=0.43.46358cb
+pkgver=0.44.b84904b
 pkgrel=1
 pkgdesc='Cowsay replacement with unicode and partial ansi escape support.'
 url='https://github.com/neeee/tewisay'
 license=('custom:CC0')
-makedepends=('go' 'asciidoc')
+makedepends=('go' 'git' 'asciidoc')
 optdepends=('cowsay: default cowfiles')
 arch=('i686' 'x86_64' 'ARM')
 source=('git://github.com/neeee/tewisay.git')
